// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one full width slice 1`] = `<TileA />`;

exports[`2. lead one and one slice 1`] = `
<View>
  <TileA />
  <TileB />
</View>
`;

exports[`3. lead one and four slice 1`] = `
<View>
  <TileI />
  <TileJ />
  <View />
  <TileJ />
  <View />
  <TileJ />
  <View />
  <TileJ />
</View>
`;

exports[`4. lead two no pic and two 1`] = `
<View>
  <TileF />
  <View />
  <TileB />
  <View />
  <TileD />
  <View />
  <TileE />
</View>
`;

exports[`5. secondary one slice 1`] = `
<View>
  <TileA />
</View>
`;

exports[`6. secondary one and columnist slice 1`] = `
<View>
  <TileT />
  <View />
  <TileH />
</View>
`;

exports[`7. secondary four slice 1`] = `
<View>
  <View>
    <View>
      <TileC />
    </View>
    <View />
    <View>
      <TileC />
    </View>
  </View>
  <View />
  <View>
    <View>
      <TileC />
    </View>
    <View />
    <View>
      <TileC />
    </View>
  </View>
</View>
`;

exports[`8. secondary one and four slice 1`] = `
<View>
  <View>
    <TheTimesLogo
      height={40}
      width={40}
    />
  </View>
  <View />
  <View>
    <View>
      <View>
        <TileN />
      </View>
    </View>
    <View />
    <View>
      <TileO />
    </View>
    <View />
    <View>
      <TileO />
    </View>
    <View />
    <View>
      <TileO />
    </View>
    <View />
    <View>
      <TileO />
    </View>
  </View>
</View>
`;

exports[`9. secondary two and two slice 1`] = `
<View>
  <View>
    <View>
      <TileC />
    </View>
    <View />
    <View>
      <TileC />
    </View>
  </View>
  <View />
  <View>
    <TileG />
  </View>
  <View />
  <View>
    <TileG />
  </View>
</View>
`;

exports[`10. secondary two no pic and two slice 1`] = `
<View>
  <TileB />
  <View />
  <TileB />
  <View />
  <TileG />
  <View />
  <TileG />
</View>
`;

exports[`11. list two and six no pic slice 1`] = `
<View>
  <View>
    <View>
      <TileC />
    </View>
    <View />
    <View>
      <TileC />
    </View>
  </View>
  <View />
  <View>
    <TileL />
    <View />
  </View>
  <View>
    <TileL />
    <View />
  </View>
  <View>
    <TileL />
    <View />
  </View>
  <View>
    <TileL />
    <View />
  </View>
  <View>
    <TileL />
    <View />
  </View>
  <View>
    <TileL />
  </View>
</View>
`;

exports[`12. leaders slice 1`] = `
<View>
  <View>
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../packages/edition-slices/assets/leaders-masthead.png",
        }
      }
    />
    <View>
      <Text>
         Leading Articles 
      </Text>
    </View>
  </View>
  <View>
    <TileM />
    <View />
    <TileM />
    <View />
    <TileM />
  </View>
</View>
`;

exports[`13. comment lead and cartoon slice 1`] = `
<View>
  <TileP />
  <View />
  <TileQ />
</View>
`;

exports[`14. puzzle slice 1`] = `
<Link
  url="/crossword/123"
>
  <View>
    <View>
      <Text
        accessibilityRole="heading"
        aria-level="3"
      >
        Times Concise medium No 7881
      </Text>
    </View>
    <View>
      <Image
        aspectRatio={1.5}
        uri="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0"
      />
    </View>
  </View>
</Link>
`;
